--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "2.x",
-    "ejs": "3.0.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "ejs": "3.0.1",
     "express": "^4.17.1",
     "knex": "^0.20.4",
-    "pg": "^7.14.0"
+    "pg": "^7.14.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {}
 }
